# api/swagger.yaml
@@ -53,6 +53,61 @@ paths:
             items:
               $ref: "#/definitions/Event"
       x-swagger-router-controller: "Event"
+  /events/seminaries:
+    get:
+      tags:
+      - "event"
+      summary: "Get available seminaries"
+      description: "Get a list of all the seminaries in the calendar"
+      operationId: "getSeminaries"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "offset"
+        in: "query"
+        description: "Pagination offset. Default is 0."
+        required: false
+        type: "integer"
+      - name: "limit"
+        in: "query"
+        description: "Maximum number of items per page. Default is 20 and cannot exceed\
+          \ 500."
+        required: false
+        type: "integer"
+      responses:
+        200:
+          description: "A collection of Seminaries"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Seminar"
+      x-swagger-router-controller: "Event"
+  /events/seminaries/{seminarID}:
+    get:
+      tags:
+      - "event"
+      summary: "Find seminar by ID"
+      description: "Returns a seminar"
+      operationId: "getSeminarById"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "seminarID"
+        in: "path"
+        description: "ID of seminar to return"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Seminar"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Seminar not found"
+      x-swagger-router-controller: "Event"
   /events/{eventID}:
     get:
       tags:
@@ -223,7 +278,8 @@ paths:
           description: "A collection of Events"
           schema:
             type: "array"
-            items: {}
+            items:
+              $ref: "#/definitions/Event"
         400:
           description: "Invalid type supplied"
         404:
@@ -255,7 +311,8 @@ paths:
           description: "A collection of Performers"
           schema:
             type: "array"
-            items: {}
+            items:
+              $ref: "#/definitions/Artist"
       x-swagger-router-controller: "Performer"
   /performers/{performerID}:
     get:
